[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/BlinkAnimation.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/MiddleSprites/Main/Boy/ConfigButton.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/MiddleSprites/Main/Girl/ConfigButton.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "BlinkAnimation"
tracks/0/type = "value"
tracks/0/path = NodePath("Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "GearAnimation"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("GearSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -30.0, 30.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GearGirlSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -30.0, 30.0, 0.0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}

[node name="Layer" type="Node2D"]
z_index = 20
script = ExtResource( 1 )

[node name="BlinkAnimator" type="AnimationPlayer" parent="."]
anims/BlinkAnimation = SubResource( 1 )
anims/GearAnimation = SubResource( 2 )

[node name="GearSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 131.141, 10.6816 )
scale = Vector2( 0.267, 0.267 )
texture = ExtResource( 2 )
offset = Vector2( -227.12, 437.522 )

[node name="GearGirlSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 129.844, 13.2582 )
scale = Vector2( 0.267, 0.267 )
texture = ExtResource( 3 )
offset = Vector2( -213.355, 434.553 )

[node name="Panel" type="Panel" parent="."]
modulate = Color( 0, 0, 0, 0 )
margin_right = 144.0
margin_bottom = 256.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}
